Criadas as classes SaleItem e Product e implementados os metodos para registrar, buscar e alualizar a venda

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\sqlexpress; Initial catalog=Sales; Integrated Security=True; TrustServerCertificate=True"
   }
 }
